--- a/groupy_api/Api_groupy/WebApplication1/WebApplication1.csproj
+++ b/groupy_api/Api_groupy/WebApplication1/WebApplication1.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Models\NovaPasta\" />
     <Folder Include="wwwroot\Image\" />
   </ItemGroup>
