--- a/Api_groupy/WebApplication1/WebApplication1.csproj
+++ b/Api_groupy/WebApplication1/WebApplication1.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Abp" Version="7.4.0" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.101.2" />
     <PackageReference Include="BCrypt" Version="1.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="bootstrap" Version="5.2.1" />
